Removed Azure!!! and Fixed the DAMN CODE!

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,20 +1,18 @@
 # ==============================
-# Kafka / Azure Event Hubs (Kafka API)
+# Kafka Configuration
 # ==============================
 
 # --- Local Kafka (default) ---
 # KAFKA_BOOTSTRAP_SERVERS=localhost:9092
 
-# --- Azure Event Hubs (Kafka endpoint) ---
-# Example: <namespace>.servicebus.windows.net:9093
-# KAFKA_BOOTSTRAP_SERVERS=
-# KAFKA_SECURITY_PROTOCOL=SASL_SSL
+# --- Remote Kafka ---
+# KAFKA_BOOTSTRAP_SERVERS=<broker>:9093
+# KAFKA_SECURITY_PROTOCOL=SASL_PLAINTEXT
 # KAFKA_SASL_MECHANISM=PLAIN
-# KAFKA_SASL_USERNAME=$ConnectionString
-# KAFKA_SASL_PASSWORD=Endpoint=sb://<namespace>.servicebus.windows.net/;SharedAccessKeyName=<name>;SharedAccessKey=<key>
+# KAFKA_SASL_USERNAME=
+# KAFKA_SASL_PASSWORD=
 
 # Optional: set if your environment requires a specific CA bundle path.
-# Otherwise leave unset and rely on system trust store.
 # KAFKA_SSL_CAFILE=
 
 # Topics (same defaults as today)
@@ -24,32 +22,3 @@ MOBILE_TOPIC=mobile-transactions
 
 # Consumer group
 KAFKA_GROUP_ID=banking_reconciler_v3
-
-# ==============================
-# Azure AI Foundry (Responses API)
-# ==============================
-
-# IMPORTANT:
-# - Uses the OpenAI Responses API.
-# - Uses deployment-backed inference ONLY (AZURE_FOUNDRY_DEPLOYMENT).
-
-AZURE_FOUNDRY_ENDPOINT=https://recon-gpt.services.ai.azure.com
-# AZURE_FOUNDRY_API_KEY=
-AZURE_FOUNDRY_DEPLOYMENT=recon-gpt
-
-# ==============================
-# Azure AI Content Safety (Text)
-# ==============================
-
-# Used to safety-check AI explanations before they are stored/displayed.
-# Endpoint example: https://<resource>.cognitiveservices.azure.com
-AZURE_CONTENT_SAFETY_ENDPOINT=https://<resource>.cognitiveservices.azure.com
-# AZURE_CONTENT_SAFETY_API_KEY=
-
-# Optional
-# AZURE_CONTENT_SAFETY_API_VERSION=2023-10-01
-# CONTENT_SAFETY_SEVERITY_THRESHOLD=4
-
-# Imagine Cup strict mode: when enabled, the service refuses to start unless BOTH
-# Azure AI Foundry and Azure AI Content Safety are configured.
-# IC_REQUIRE_AI_SERVICES=1
