--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,11 @@
     "axios": "^1.13.2",
     "framer-motion": "^12.23.26",
     "jwt-decode": "^4.0.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.562.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.22.0",
     "react-scripts": "^5.0.1",
     "recharts": "^2.12.0",
